fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,5 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #F4F2EE;
+    overflow-x: hidden;
 }
